// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should render a message of theirs 1`] = `
<li
  className="message message--theirs"
>
  <Avatar
    src="avatar.jpg"
  />
  <span
    className="message-text"
  >
    Another message just for test
  </span>
</li>
`;

exports[`Message component should render a message of yours 1`] = `
<li
  className="message message--yours"
>
  <span
    className="message-text"
  >
    Some message
  </span>
</li>
`;
